alignment issues

--- a/src/app/main-page/form/form.component.scss
+++ b/src/app/main-page/form/form.component.scss
@@ -11,7 +11,8 @@
    border-radius: 15px;
    width: 90%;
    padding: 5%;
-   height: 85%
+   height: auto;
+
 }
 
 .spinner {
